--- a/src/components/ItemListContainer/Item.css
+++ b/src/components/ItemListContainer/Item.css
@@ -23,7 +23,8 @@
 }
 
 .card-header {
-    background-color:rgb(233, 167, 27);
+    background: rgb(251,142,33);
+background: linear-gradient(16deg, rgba(251,142,33,1) 0%, rgba(236,171,33,1) 49%, rgba(245,167,0,1) 100%);
     color: black;
 }
 
@@ -43,6 +44,7 @@ a:hover {
 
 .titleCardHeader {
     font-size: 20px;
+    color: #070525
 }
 
 .card:hover {
@@ -55,6 +57,7 @@ a:hover {
     color: rgb(233, 167, 27);
     font-size: 25px;
    padding-top: 2rem;
+   text-align: center;
   
   }
 
