--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -50,6 +50,7 @@
     padding: 8px;
     border-radius: 10px;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    border-color: chocolate;
 }
 
 .navbar {
