--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -64,6 +64,17 @@
      margin-right: 1rem;
 }
 
+.cantidadItem {
+    background-color: black;
+    color: rgb(233, 167, 27);
+    width: 20px;
+    font-size: 14px;
+    border-radius: 30px;
+    position: absolute;
+    bottom: 20px;
+    margin-left: 35px;
+}
+
 @media (max-width: 1024px) {
     .form-control2 {
         width: 100%;
