--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -17,3 +17,6 @@ background: linear-gradient(16deg, rgba(251,142,33,1) 0%, rgba(236,171,33,1) 49%
     padding: 1rem;
 }
 
+.carousel {
+    width: 60%;
+}
