--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background: rgb(2,0,36);
-  background: linear-gradient(142deg, rgba(2,0,36,1) 0%, rgba(51,51,51,1) 73%, rgba(147,147,147,1) 100%);
+   /* background: linear-gradient(142deg, rgba(2,0,36,1) 0%, rgba(51,51,51,1) 73%, rgba(147,147,147,1) 100%);  */
+
   text-align: center;
 }
 
