--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footerContainer {
     margin-top: 2rem;
    
-    background-color: #343A40;
+    background-color: black;
     color: white;
     text-align: left;
 }
