--- a/src/components/ItemListContainer/Item.css
+++ b/src/components/ItemListContainer/Item.css
@@ -1,5 +1,5 @@
 .card {
-    width: 20%;
+    width: 25%;
 }
 
 .card-margin {
@@ -23,12 +23,12 @@
 }
 
 .cardFoto {
-     width: 50%; 
+    width: 50%;
 }
 
 .card-header {
-    background: rgb(251,142,33);
-background: linear-gradient(16deg, rgba(251,142,33,1) 0%, rgba(236,171,33,1) 49%, rgba(245,167,0,1) 100%);
+    background: rgb(251, 142, 33);
+    background: linear-gradient(16deg, rgba(251, 142, 33, 1) 0%, rgba(236, 171, 33, 1) 49%, rgba(245, 167, 0, 1) 100%);
     color: black;
 }
 
@@ -37,8 +37,8 @@ background: linear-gradient(16deg, rgba(251,142,33,1) 0%, rgba(236,171,33,1) 49%
 }
 
 .card-footer {
-    border-top: solid rgba(236,171,33,1) 2px;
-  
+    border-top: solid rgba(236, 171, 33, 1) 2px;
+
 }
 
 .card-body {
@@ -61,28 +61,29 @@ a:hover {
 }
 
 .card:hover {
-    box-shadow:  rgba(248, 248, 248, 0.7)  5px 5px 10px ;
-   
+    box-shadow: rgba(248, 248, 248, 0.7) 5px 5px 10px;
+
     transition: 0.2s;
 }
 
 .bienvenida {
     color: rgb(233, 167, 27);
     font-size: 25px;
-   padding-top: 2rem;
-   text-align: center;
-  
-  }
+    padding-top: 2rem;
+    text-align: center;
 
-  .precio {
-      font-size: 20px;
-  }
+}
 
-  .categoria {
-      color: rgb(65, 64, 64);
-  }
+.precio {
+    font-size: 20px;
+}
 
-  @media (max-width: 1024px) {
+.categoria {
+    color: rgb(65, 64, 64);
+}
+
+@media (max-width: 1024px) {
     .card {
-      width: 80%;
-    }}
+        width: 80%;
+    }
+}
