--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -14,6 +14,23 @@
     color: rgb(233, 167, 27);
 }
 
+.buttonCount2 {
+    background-color: black;
+    color: rgb(233, 167, 27);
+    padding: 5px 15px;
+    margin: 0px 10px ;
+    border-radius: 20px;
+    border-style: none;
+    font-weight: bolder;
+    font-size: 16px;
+
+}
+
+.buttonCount2:hover {
+    color: black;
+    background-color: rgb(233, 167, 27);
+}
+
 .count {
     color: black;
 }
