--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,11 @@
+.homeHero {
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 .imgHomeHero {
 position: relative;
-width: 100%;
+width: 80%;
 }
 
 .buttonHome {
@@ -9,6 +14,40 @@ width: 100%;
 
 .categoryCard {
     background-color: burlywood;
-    width: 25%;
+    width: 250px;
+   height: 250px;
     margin: 1rem;
+    border-radius: 30px;
+}
+
+.titleCategory {
+    color: #1D1C2C;
+    font-size: 22px;
+    padding: 1rem 0; 
+}
+
+.categoryCard:hover {
+    background-color: rgb(173, 138, 92);
+}
+
+.dataHomeHero {
+    top: 160px;
+}
+
+.categoryTitle {
+   color:  rgba(251,142,33,1);
+}
+
+.imgCard {
+    width: 80%;
+}
+
+@media (max-width: 1024px) {
+    .dataHomeHero {
+        top: 15px;
+    }
+
+    .homeTitle {
+        font-size: 15px;
+    }
 }
