--- a/src/components/ItemListContainer/Item.css
+++ b/src/components/ItemListContainer/Item.css
@@ -1,6 +1,6 @@
-.card {
+/* .card {
     width: 25%;
-}
+} */
 
 .card-margin {
     margin: 0 10px;
@@ -80,6 +80,10 @@ a:hover {
 
 .categoria {
     color: rgb(65, 64, 64);
+}
+
+.heartSize {
+    font-size: 25px;
 }
 
 @media (max-width: 1024px) {
