--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -10,8 +10,8 @@
 }
 
 .buttonCount:hover {
-    background-color: black;
-    color: rgb(233, 167, 27);
+    background-color: rgb(197, 100, 10);
+   
 }
 
 .buttonCount2 {
