--- a/src/components/ItemListContainer/Item.css
+++ b/src/components/ItemListContainer/Item.css
@@ -1,7 +1,3 @@
-/* .card {
-    width: 25%;
-} */
-
 .card-margin {
     margin: 0 10px;
 }
@@ -24,6 +20,10 @@
 
 .cardFoto {
     width: 50%;
+}
+
+.cardFotoWish {
+    width: 30%;
 }
 
 .card-header {
@@ -84,6 +84,10 @@ a:hover {
 
 .heartSize {
     font-size: 25px;
+}
+
+.buttonWish {
+    border: none;
 }
 
 @media (max-width: 1024px) {
